@@ -52,12 +52,13 @@ p @ids;
 #     [32] "SMRZ",
 #     [33] "STRAKA",
 #     [34] "TKR",
-#     [35] "TRIPIE",
-#     [36] "TYNOVSKY",
-#     [37] "VARISD",
-#     [38] "VASEKD",
-#     [39] "YENYA",
-#     [40] "ZABA",
-#     [41] "ZEMAN",
-#     [42] "ZOUL"
+#     [35] "TPODER",
+#     [36] "TRIPIE",
+#     [37] "TYNOVSKY",
+#     [38] "VARISD",
+#     [39] "VASEKD",
+#     [40] "YENYA",
+#     [41] "ZABA",
+#     [42] "ZEMAN",
+#     [43] "ZOUL"
 # ]
